# OpenPi-Baseline

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  requirements_ros1.in  requirements_ros1.txt
.github/workflows/: pre-commit.yml  test.yml
docker/aloha_act/: .gitignore  Dockerfile  arm.py  compose_real.yml  compose_sim.yml  ros_nodes.launch
docker/aloha_act/rospkg/: CMakeLists.txt  realsense_publisher.py  robot_utils.py
docker/aloha_act/rospkg/launch/: ros_nodes.launch
docker/pi0/: Dockerfile
docs/: jax_acceleration.md
examples/: hello.py  inference.ipynb  policy_records.ipynb
examples/aloha_real/: Dockerfile  README.md  aloha_hd5_to_lerobot.py  compose.yml  constants.py  env.py  main.py  real_env.py  requirements.txt  robot_utils.py  video_display.py
examples/aloha_sim/: Dockerfile  README.md  compose.yml  env.py  main.py  requirements.in  requirements.txt  saver.py
examples/calvin/: Dockerfile  README.md  compose.yml  main.py  requirements.in  requirements.txt
examples/droid/: README.md  main.py
examples/libero/: Dockerfile  README.md  compose.yml  convert_libero_data_to_lerobot.py  main.py  requirements.in  requirements.txt
examples/rlbench/: convert_rlbench_data_to_lerobot.py  eval_atomic.sh  main.py  rlbench_env.py  rlbench_utils.py
examples/simple_client/: Dockerfile  compose.yml  main.py  requirements.txt
examples/simple_modal_client/: README.md  main.py  modal_policy.py  requirements.in  requirements.txt
scripts/: aloha_hd5.py  compose.yml  compute_norm_stats.py  compute_norm_stats_jax.py  serve_policy.Dockerfile  serve_policy.py  test_compute_norm_stats_jax.py  train.py  train_test.py
scripts/docker/: compose.yml  serve_policy.Dockerfile
src/openpi/: conftest.py  transforms.py  transforms_test.py
src/openpi/base/: array_typing.py  image_tools.py  image_tools_test.py  normalize.py
src/openpi/models/: common.py  exported.py  exported_test.py  gemma.py  gemma_fast.py  lora.py  lora_test.py  model.py  model_test.py  pi0.py  pi0_fast.py  pi0_small.py  resnet.py  siglip.py  tokenizer.py  tokenizer_test.py  transformer.py  vit.py
src/openpi/policies/: aloha_policy.py  base_policy.py  calvin_policy.py  droid_policy.py  libero_policy.py  policy.py  policy_config.py  policy_config_test.py  policy_test.py  rlbench_policy.py
src/openpi/runtime/: runtime.py
src/openpi/runtime/agents/: policy_agent.py
src/openpi/runtime/environments/: requirements_ros1.txt
src/openpi/runtime/environments/aloha_real/: Dockerfile  compose.yml  env.py  main.py  real_env.py  robot_utils.py  video_display.py
src/openpi/runtime/environments/aloha_sim/: README.md  main.py  saver.py
src/openpi/serving/: Dockerfile  http_policy_client.py  http_policy_server.py  http_policy_server_pi0.py  serve_policy.py  websocket_policy_client.py  websocket_policy_server.py
src/openpi/shared/: array_typing.py  download.py  download_test.py  msgpack_numpy_test.py  nnx_utils.py  normalize.py
src/openpi/training/: checkpoints.py  config.py  data_loader.py  data_loader_test.py  droid_rlds_dataset.py  optimizer.py  sharding.py  train.py  utils.py  weight_loaders.py
