[project]
name = "openpi"
version = "0.1.0"
description = "Physical Intelligence open source repo"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "augmax>=0.3.4",
    "dm-tree>=0.1.8",
    "einops>=0.8.0",
    "equinox>=0.11.8",
    "flatbuffers>=24.3.25",
    "flax==0.9.0",
    "ipykernel>=6.29.5",
    "jax[cuda12]==0.4.34",
    "jaxtyping==0.2.34",
    # TODO: Upgrade to 2.1.2 once we have an alternative to pickle for data serialization.
    "numpy==1.26.4",
    "orbax-checkpoint==0.7.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "sentencepiece>=0.2.0",
    "typing-extensions>=4.12.2",
    "tyro>=0.8.14",
    "tqdm",
    "pillow>=11.0.0",
    "opencv-python>=4.10.0.84",
    "gym-aloha>=0.1.1",
    "imageio>=2.36.1",
]

[project.urls]
Repository = "https://github.com/Physical-Intelligence/openpi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  "docker",
  "third_party",
]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
  "B",
  "C4",
  "DTZ",
  "E4",
  "E7",
  "E9",
  "F",
  "FBT",
  "FURB",
  "I",
  "ICN",
  "ISC",
  "LOG",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PLC",
  "PLE",
  "PLR1",
  "PLR5",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RET",
  "RUF",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "UP",
  "W",
]
ignore = [
  "F722",  # Conflicts with array typing.
  "T201",  # We use print statements.
]
unfixable = [
  "B905", # Fix defaults to strict=False, which is not what we want.
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]
known-third-party = ["wandb"]
