[project]
name = "openpi"
version = "0.1.0"
description = "Physical Intelligence open source repo"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Physical-Intelligence/openpi"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  "docker",
  "third_party",
]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
  "B",
  "C4",
  "DTZ",
  "E4",
  "E7",
  "E9",
  "F",
  "FBT",
  "FURB",
  "I",
  "ICN",
  "ISC",
  "LOG",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PLC",
  "PLE",
  "PLR1",
  "PLR5",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RET",
  "RUF",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "UP",
  "W",
]
ignore = [
  "F722",  # Conflicts with array typing.
  "T201",  # We use print statements.
]
unfixable = [
  "B905", # Fix defaults to strict=False, which is not what we want.
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]
known-third-party = ["wandb"]
